<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="file_name_label">File: </string>
    <string name="play_button_label"   > Play  </string>
    <string name="delete_button_label" >Delete </string>
    <string name="preview_button_label">Preview</string>
    <string name="record_button_description">Press to record.</string>
    <string name="pause_button_description">Press to stop.</string>
    
    <string name="file_dialog_label">Manage Recordings</string>
    <string name="default_directory_menu_label">Default Directory</string>
    <string name="quit_label">Quit</string>
    <string name="menu_exit_label">Exit</string>
    
    <string name="top_level_directory_label">Base Directory:     </string>
    <string name="default_directory_label">Default Directory:  </string>
    <string name="internal_directory_label">Default Internal Directory</string>
    <string name="external_directory_label">Default External Directory</string>
    
    <string name="new_directory_name_label">New Directory: </string>
    
    <string name="output_type_selection_dialog_label_string">Select Output Type</string>
    <string name="output_type_dialog_button_label">Output File Attributes</string>
    <string name="raw_output_attributes_dialog_label_string">Raw Recording Attributes</string>
    <string name="raw_output_attributes_dialog_file_container_label">File Type</string>
    <string name="raw_output_attributes_dialog_sample_rate_container_label">Samples per Second</string>
    <string name="raw_output_attributes_dialog_channel_container_label">Channel Type</string>
    <string name="raw_output_attributes_dialog_bits_container_label">Bits per Sample</string>
    
    <string name="form_output_attributes_dialog_label_string">Recording Attributes</string>
    <string name="form_output_attributes_dialog_file_container_label">Output Type</string>
    <string name="form_output_attributes_dialog_encoder_type_container_label">Encoder Type</string>
    
    <string name="default_directory_title_label">Default Directory</string>
    
    <string name="exception_null_file_name">Please Select a File</string>
    <string name="exception_file_access">Unable to Delete File</string>
    <string name="exception_no_subdirectory">No Subdirectory</string>
    <string name="exception_create_dir_failed">Create Directory Failed!</string>
</resources>
