<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/default_directory_menu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/default_directory_menu_label" />
    
    <item 
        android:id="@+id/file_dialog_menu1"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/file_dialog_label" />
    
    <item 
        android:id="@+id/output_type_dialog_button"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/output_type_dialog_button_label" />
    
    <item
        android:id="@+id/menu_exit_button1"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menu_exit_label" />

</menu>
