<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/form_record_attribute_dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/form_output_attributes_dialog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:gravity="center_horizontal"
        android:text="@string/form_output_attributes_dialog_label_string" />

    <View
        android:id="@+id/form_output_attributes_dialog_output_type_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/form_output_attributes_dialog_label"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/form_output_attributes_dialog_button_bar"
        style="?android:attr/actionBarTabBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/form_output_attributes_dialog_ok_button"
            style="?android:attr/actionButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

         <View
            android:id="@+id/form_output_attributes_button_bar_divider"
            style="@style/AppBaseTheme"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#000000" />
        
        <Button
            android:id="@+id/form_output_attributes_dialog_cancel_button"
            style="?android:attr/actionButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />

        </LinearLayout>

    <View
        android:id="@+id/form_output_attributes_dialog_button_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/form_output_attributes_dialog_button_bar"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/form_output_attribute_file_type_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/form_output_attributes_dialog_output_type_divider"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/form_output_attribute_file_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_output_attributes_dialog_file_container_label" />

        <ListView
            android:id="@+id/form_output_attribute_file_type_list"
            android:layout_width="match_parent"
            android:layout_height="58dp" >
        </ListView>
        
    </LinearLayout>

    <View
        android:id="@+id/form_output_attribute_file_type_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/form_output_attribute_file_type_container"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/form_output_attribute_encoder_type_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/form_output_attribute_file_type_divider"
        android:layout_above="@id/form_output_attributes_dialog_button_divider"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/form_output_attribute_encoder_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_output_attributes_dialog_encoder_type_container_label" />

        <ListView
            android:id="@+id/form_output_attribute_encoder_type_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    
    </LinearLayout>

</RelativeLayout>